<resources>
    <string name="app_name">FreshMeter</string>
    <string name="freshmeter" translatable="false">FreshMeter</string>
    <string name="articles">Articles</string>
    <string name="more">More</string>
    <string name="johndoe_exemple_com" translatable="false">Johndoe@example.com</string>
    <string name="login">Login</string>
    <string name="email" translatable="false">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register">Register</string>
    <string name="re_enter_password">Re-Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_account">Already Have Account?</string>
    <string name="get_started" translatable="false">Get Started</string>
    <string name="camera" translatable="false">camera</string>
    <string name="take_photo">Take Photo</string>
    <string name="back" translatable="false">Back</string>
    <string name="log_out">Log Out</string>
    <string name="username">Username</string>
    <string name="edit_photo">Edit Photo</string>
    <string name="profile">Profile</string>
    <string name="open_gallery">Open Gallery</string>
    <string name="analyze">Analyze</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="change_language">Change Language</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="splash_screen" translatable="false">splash_screen</string>
    <string name="article_title" translatable="false">Article Title</string>
    <string name="result" translatable="false">Result\n</string>
    <string name="more_info" translatable="false">More Info\n</string>
    <string name="enter_registered_email">Enter Registered Email</string>
    <string name="send_code">Send</string>
    <string name="available_to_scan">Available to Scan</string>

    <string name="article_1_title">Benefits of Fruits and Vegetables</string>
    <string name="article_1_url">https://krakataumedika.com/info-media/artikel/manfaat-buah-dan-sayuran-untuk-kesehatan</string>
    <string name="article_2_title">Managing Fruits and Vegetables</string>
    <string name="article_2_url">https://www.rskariadi.co.id/news/102/MENGOLAH-BUAH-DAN-SAYUR-DENGAN-BENAR/Artikel</string>
    <string name="article_3_title">Recipe Recommendations</string>
    <string name="article_3_url">https://www.fimela.com/food/read/5039289/10-resep-masakan-sayur-enak-dan-praktis-cocok-untuk-menu-sehari-hari?page=4</string>
    <string name="scan_1">Apple</string>
    <string name="scan_2">Mango</string>
    <string name="scan_3">Sapodilla</string>
    <string name="scan_4">Tomato</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="your_old_password">Your Old Password</string>
    <string name="new_password">New Password</string>
    <string name="your_new_password">Your New Password</string>
    <string name="change">Change</string>
    <string name="menu">Menu</string>
    <string name="step1">1. Tap the camera button.</string>
    <string name="step2">2. Click open gallery then choose from gallery or take a picture, after that click Analyze.</string>
    <string name="step3">3. You can see the result</string>
    <string name="step4">4. Click one of the item to see more detail</string>
    <string name="analyze_result">Analyze Result</string>
    <string name="detail">Detail</string>
    <string name="fruit_class" translatable="false">Fruit Class</string>
    <string name="confidence" translatable="false">Confidence</string>
    <string name="freshness_percentage" translatable="false">Freshness Percentage</string>
    <string name="freshness_days" translatable="false">Freshness Days</string>
    <string name="tips" translatable="false">Tips</string>
</resources>