<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.forgotPassword.ForgotPasswordActivity">

    <ImageView
        android:id="@+id/iv_changePassword"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/change_password_vector" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_changePassword">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_changePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/change_password"
                android:textAlignment="center"
                android:textSize="25sp"
                android:textStyle="bold"
                android:fontFamily="@font/montserrat"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <TextView
            android:id="@+id/tv_oldPassword"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginBottom="8dp"
            android:text="@string/old_password"
            android:textSize="18sp"
            android:fontFamily="@font/montserrat"/>

        <com.cwb.freshmeter.ui.custom.CustomEditText
            android:id="@+id/et_oldPassword"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="16dp"
            android:background="?attr/editTextBackground"
            android:hint="@string/your_old_password"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:inputType="textEmailAddress"
            android:fontFamily="@font/montserrat"/>

        <TextView
            android:id="@+id/tv_newPassword"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginBottom="8dp"
            android:text="@string/new_password"
            android:textSize="18sp"
            android:fontFamily="@font/montserrat"/>

        <com.cwb.freshmeter.ui.custom.CustomEditText
            android:id="@+id/et_newPassword"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="16dp"
            android:background="?attr/editTextBackground"
            android:hint="@string/your_new_password"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:inputType="textEmailAddress"
            android:fontFamily="@font/montserrat"/>

        <Button
            android:id="@+id/btn_changePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/green"
            android:onClick="onClickChangePassword"
            android:text="@string/change"
            android:textSize="18sp"
            android:fontFamily="@font/montserrat"/>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>